# longline

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  cliff.toml  install.sh  justfile  longline-project-brief.md  release.toml
.claude/: settings.json  settings.local.json
rules/: ansible.yaml  cli-tools.yaml  codex.yaml  core-allowlist.yaml  default-rules.yaml  descriptive-ask.yaml  django.yaml  docker.yaml  filesystem.yaml  git.yaml  interpreters.yaml  just.yaml  manifest.yaml  network.yaml  node.yaml  package-managers.yaml  python.yaml  rules.yaml  rust.yaml  secrets.yaml  system.yaml  terraform.yaml
scripts/: cli-contract-smoke.sh  verify-sanitization.sh
src/: ai_judge.rs  cli.rs  domain.rs  embedded_rules.rs  evaluator.rs  lib.rs  logger.rs  main.rs  output.rs  parser.rs  policy.rs  types.rs
tests/: ai_judge_project_context.rs  ai_judge_project_prompt.rs  ai_judge_runner_hygiene.rs  ask_reason_regressions.rs  bare_assignments.rs  claude_adapter_flags.rs  claude_adapter_protocol.rs  claude_adapter_sensitive_env.rs  claude_adapter_tools.rs  cli_check.rs  cli_files.rs  cli_init.rs  cli_rules.rs  codex_adapter_flags.rs  codex_adapter_protocol.rs  codex_adapter_tools.rs  compound_builtins_integration.rs  config_allowlists.rs  config_global.rs  config_integration.rs  config_overlays.rs  config_precedence.rs  config_project.rs  e2e_binary_smoke.rs  gh_readonly_classifier.rs  git_editor_integration.rs  golden_tests.rs  grep_glob_tool.rs  harness_smoke.rs  hook_protocol.rs  init_writes_judge_settings.rs  integration.rs  read_tool.rs  (+5 more)
(+137 files in other folders)
