[package]
name = "longline"
version = "0.1.8"
edition = "2021"
description = "System-installed safety hook for Claude Code"
license = "MIT"
repository = "https://github.com/devinbarry/longline"
publish = false

[dependencies]
tree-sitter = "0.24"
tree-sitter-bash = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
glob-match = "0.2"
comfy-table = "7"
yansi = { version = "1", features = ["detect-tty", "detect-env"] }

[dev-dependencies]
tempfile = "3.24.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
